# CosmicKube

./: .gitignore  Jenkinsfile  LICENSE  README.md  cache.Dockerfile  diesel.toml  server.Dockerfile
.github/workflows/: build-cache-server.yml  build-game-client.yml  build-game-server.yml  test-jenkinsfile.yml
backend/: Cargo.toml  README.md
backend/src/: cache.rs  cache_client.rs  cache_test.rs  grid.rs  handlers.rs  kube.rs  lib.rs  llm.rs  local_grid.rs  main.rs  mem_client.rs  modify_gamestate.rs  player.rs  recipe.rs  schema.rs  space.rs  vecmap.rs  websocketstructs.rs  ws.rs
backend/src/ws/: example.json  gen_json.rs
design/: initial_crafting_sketch.txt
game-source/: WebSockets.gd  box.tscn  client.Dockerfile  export_presets.cfg  icon.svg.import  main.tscn  player_character.gd  player_character.tscn  project.godot
game-source-redux/: package.json  pnpm-lock.yaml  tsconfig.json
game-source-redux/src/: App.svelte  main.ts  websockets.ts
game-source-redux/src/lib/: websockets.ts
game-source-redux/src/types/: kube_types.d.ts  kube_types.ts
game-source/assets/: Illustration95.png.import  box.aseprite  box.png.import  button-tile.aseprite  lil_guy.aseprite  lil_guy.png.import  main_menu.png.import  player.png.import  tileset.png.import
game-source/scenes/box/: box.gd  box.tscn
game-source/scenes/main/: main.gd  main.tscn  tileset.png.import
game-source/scenes/other_player/: other_player.gd  other_player.tscn
game-source/scenes/player_character/: player_character.gd  player_character.tscn
kube_cache/: .gitignore  README.md  cache.Dockerfile  funny.js  go.mod  go.sum  main.go
kube_cache/aiStuff/: ai.go  dalle.go
kube_cache/imgResize/: imageResize.go
kube_cache/metrics/: metrics.go
kube_cache/model/: model.go  seed.go
kube_cache/server/: cache.go  index.go
migrations/2024-03-02-174331_create_init_db/: down.sql  up.sql
