[package]
name = "cosmic_kube"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openai_api_rust = "0.1.8"
diesel = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15"

[dependencies.uuid]
version = "1.7.0"
features = [
    "v5",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
