[package]
name = "cosmic_kube"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15"
uuid = { version = "1.7.0", features = ["serde", "v4", "fast-rng", "macro-diagnostics"] }
tokio = { version = "1.15", features = ["full", "tracing", "rt"] }
tokio-stream = "0.1.6"
async-trait = "0.1.77"
thiserror = "1.0.57"
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = { version = "0.3", default-features=false}
serde_repr = "0.1"
reqwest = "0.11.24"
url = "2.5.0"
rand = "0.8.5"
lazy_static = "1.4.0"
console-subscriber = "0.2.0"
redis = "0.25.3"